[tool.poetry]
name = "pdv-package"
version = "0.1.0"
description = ""
authors = ["Toby Coleman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"



[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
